--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webpack 脚手架</title>
-<link rel="icon" href="react-logo.png"></head>
+</head>
 <body>
     <h1>webpack 脚手架</h1>
     
-<script defer src="main.js"></script></body>
+</body>
 </html>
